# mellea

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  RELEASE.md  docs.json  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: component.md  misc.md  requirement.md  sampling.md  tool.md
.github/workflows/: cd.yml  ci.yml  docs-publish.yml  hold.yml  pr-label.yml  pr-update.yml  pypi.yml  quality.yml
cli/: m.py
cli/alora/: README_TEMPLATE.jinja  commands.py  intrinsic_uploader.py  train.py  upload.py
cli/decompose/: decompose.py  m_decomp_result_v3.py.jinja2  pipeline.py
cli/eval/: commands.py  runner.py
cli/fix/: __init__.py  async_fixer.py  commands.py  genstub_fixer.py
cli/serve/: app.py  commands.py  models.py  schema_converter.py  streaming.py  utils.py
concepts/: requirements-system.md
docs/: AGENTS_TEMPLATE.md  alora.md
docs/dev/: intrinsics_and_adapters.md  requirement_aLoRA_rerouting.md  tool_calling.md
docs/docs/: docs.json
docs/examples/: README.md  as_generic_chat_history.py  conftest.py
docs/metrics/: coverage-baseline.json  coverage-current.json
docs/scripts/: check_docs.py
guide/: CONTRIBUTING.md
how-to/: use-async-and-streaming.md
integrations/: openai.md
mellea/: __init__.py
mellea/backends/: formatter.py  huggingface.py  kv_block_helpers.py  litellm.py  model_ids.py  model_options.py  ollama.py  openai.py  tools.py  utils.py  watsonx.py
mellea/core/: __init__.py  backend.py  base.py  requirement.py  utils.py
mellea/formatters/: template_formatter.py
mellea/helpers/: openai_compatible_helpers.py
mellea/plugins/: __init__.py  manager.py  types.py
mellea/security/: analysis.py  core.py
mellea/stdlib/: __init__.py  base.py  chunking.py  functional.py  mify.py  mobject.py  session.py  start_backend.py
mellea/telemetry/: __init__.py  backend_instrumentation.py  context.py  logging.py  metrics.py  metrics_plugins.py  pricing.py  tracing.py
test/: MARKERS_GUIDE.md  README.md  conftest.py  predicates.py  test_example_collection.py
test/backends/: test_bedrock_unit.py  test_cache.py  test_document_rendering_unit.py  test_huggingface.py  test_litellm_ollama.py  test_mellea_tool.py  test_ollama.py  test_ollama_unit.py  test_openai_intrinsics.py  test_openai_intrinsics_unit.py  test_openai_ollama.py  test_openai_unit.py  test_openai_vllm.py  test_pydantic_tool_parameters.py  test_schema_helpers.py  test_tool_calls.py  test_tool_decorator.py  test_utils.py  test_vision_openai.py  test_watsonx.py
test/cli/: test_alora_train_integration.py  test_build_model_options.py  test_decompose_unit.py  test_eval_unit.py  test_fix_async.py  test_fix_genstub.py  test_schema_converter.py  test_serve.py  test_serve_errors.py  test_serve_integration.py  test_serve_models.py  test_serve_streaming.py  test_serve_streaming_tool_calls.py  test_serve_sync_async.py  test_serve_tool_calling.py  test_serve_utils.py  test_tool_call_index_verification.py
test/core/: test_base.py  test_component_typing.py  test_computed_model_output_thunk.py  test_logger_plugin_hooks.py  test_partial_validation_result.py  test_requirement_helpers.py  test_stream_validate.py  test_streaming_sync_functions.py  test_utils_logging.py
test/decompose/: test_decompose.py
test/formatters/: test_template_formatter.py
test/helpers/: test_async_helpers.py  test_openai_compatible_helpers.py  test_server_type.py
test/package/: test_dependency_isolation.py
test/plugins/: conftest.py  test_all_payloads.py  test_blocking.py  test_execution_modes.py  test_hook_call_sites.py  test_internal_tool_hook_skip.py  test_manager.py  test_mellea_plugin.py  test_policy_enforcement.py  test_priority_ordering.py  test_scoping.py  test_tool_hooks_redaction.py  test_unregister.py
test/scripts/: run_tests_with_ollama_and_vllm.sh
test/stdlib/: test_chunking.py  test_functional.py  test_functional_unit.py  test_session_unit.py  test_spans.py
test/stdlib_basics/: test_component_typing.py
test/telemetry/: test_backend_instrumentation.py  test_context.py  test_logging.py  (+13 more)
(+269 files in other folders)
